# Zu-Git

./: .gitignore  CHANGELOG.md  README.md  design-brief-reaction-score.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: github-identity.md  reaction-score.md  release-diff.md
scripts/: changelog.js
src/: api.ts  changelog.ts  draft-pr.ts  filters.ts  index.css  main.ts  reaction-score.ts  release-diff.ts  render.ts  state.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dashboard.rs  github.rs  jira.rs  lib.rs  main.rs  models.rs  secret_store.rs  storage.rs
src/shared/: pr-model.ts  rpc.ts  settings.ts
