[package]
name = "zugit"
version = "0.9.4"
description = "ZuGit – PR dashboard"
authors = []
edition = "2021"
rust-version = "1.80"

[lib]
name = "zugit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", default-features = false, features = ["windows-native", "sync-secret-service", "crypto-rust"] }
chrono = "0.4"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
regex = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
